--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@grpc/proto-loader": "^0.6.9",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^8.2.6",
     "@nestjs/platform-express": "^8.0.0",
     "class-validator": "^0.13.2",
